--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -4,9 +4,13 @@ nome_dominio = "lab.tonanuvem.com"
 senha_compartilhada = "sua_senha_segura_aqui"
 ttl_dns = 60
 
+# Tags padrão
 tags = {
-  Project     = "GerenciadorDNS"
-  Environment = "Production"
-  ManagedBy   = "Terraform"
-  Aluno       = "joao"  # Substitua pelo nome do aluno
-} 
+  Projeto    = "Gerenciador DNS"
+  Aluno      = "joao"
+  Ambiente   = "laboratorio"
+  Gerenciado = "terraform"
+}
+
+# Configurações do Route 53
+id_zona_hospedada = ""  # Será preenchido automaticamente pelo script de configuração 
