--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-boto3==1.34.34
+boto3==1.34.69
+botocore==1.34.69
+python-dotenv==1.0.1
 python-jose==3.3.0
 cryptography==42.0.2
 dnspython==2.4.2 
